# ferrisbot-for-discord

./: Cargo.toml
src/: checks.rs  helpers.rs  main.rs  types.rs
src/commands/: crates.rs  godbolt.rs  modmail.rs  utilities.rs
src/commands/godbolt/: targets.rs
src/commands/playground/: procmacro.rs  util.rs
